<resources>

    <string name="app_name">ownMdm</string>
    <string name="title_activity_main">ownMdm</string>
    <string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>    
	<string name="menu_root">Root test</string>    
	<string name="serverData">Server Data</string>    
	<string name="Debug">Debug</string>    
	<string name="Accept">OK</string>    
	<string name="stealthMode">Stealth Mode</string>    
	<string name="acceptAny">Do not verify SSL certificate</string>    
	<string name="YourServer">Your ownMdm Server</string>    
	<string name="Others">Others</string>    
	<string name="HowToUse">Press OK and Enable this App as Device Administrator.\n\nAfter that: Open this App again and enable Stealh Mode.</string>    
	<string name="serverOwnMail">Gmail account to send content</string>
	<string name="enableStealthModeAgain">Remember to enable stealth mode again!</string>    
							
</resources>